package tn.faculte.facultebackend.Entity;

public enum MessageStatus {
    SENT, DELIVERED, READ;

}
